# sentinel-protocol

./: .dockerignore  .gitignore  CITATIONS.md  LICENSE  README.md  docker-compose.yml  hardhat.config.js  index.html  netlify.toml  package.json  vercel.json
.github/: FUNDING.yml
.github/workflows/: autonomous-ceo.yml  deploy.yml  gh-pages.yml
agent/: CEO.js
api/: Dockerfile  package.json  server.js
contracts/: AuthorityLedger.sol  SentinelMarketplace.sol
docs/: ARCHITECTURE_v4.md  MONETIZATION.md  TECHNICAL_SPEC.md
frontend/: index.html
rust-core/: Cargo.toml
rust-core/src/: main.rs
scripts/: build_deploy.ps1  demo_rust.ps1
scripts/deploy/: deploy_ledger.js
test/: LedgerTest.js
