[package]
name = "sentinel-core"
version = "4.0.0"
edition = "2021"
authors = ["1nsharma", "Amey (AI)"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = "0.4"
base64 = "0.21"
ed25519-dalek = "2.0" # Fast, high-security signatures
rand = "0.8"
